[gd_scene load_steps=11 format=3 uid="uid://updxlsecf8xr"]

[ext_resource type="Script" path="res://Menu_System/Scripts/main_menu.gd" id="1_2fjw2"]
[ext_resource type="Script" path="res://Menu_System/Scripts/play_button.gd" id="2_bqwm6"]
[ext_resource type="Theme" uid="uid://g175br3gjr52" path="res://ui/main-menu/main_menu.tres" id="2_rsrfe"]
[ext_resource type="StyleBox" uid="uid://cfiuypyo7lg7b" path="res://ui/main-menu/play_game_button_primary.tres" id="4_ljg0n"]
[ext_resource type="StyleBox" uid="uid://bblbsdb62dxtm" path="res://ui/main-menu/play_game_button_secondary.tres" id="5_855qb"]
[ext_resource type="Shader" path="res://scripts/postprocesses_layers/color_4_post_process.gdshader" id="6_ekvbl"]
[ext_resource type="AudioStream" uid="uid://6glip6ylyj0w" path="res://assets/audio/music/main-menu/main_menu_theme.mp3" id="8_rbqbq"]
[ext_resource type="AudioStream" uid="uid://gkoqbh46xvm8" path="res://assets/audio/music/game-intro/loop_1.wav" id="9_6yras"]
[ext_resource type="AudioStream" uid="uid://cl3i7svr4j82y" path="res://assets/audio/music/menu-actions/click.mp3" id="9_ch556"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x0en0"]
shader = ExtResource("6_ekvbl")
shader_parameter/color1 = Color(0.0980392, 0, 0, 1)
shader_parameter/color2 = Color(0.337255, 0.0352941, 0.0352941, 1)
shader_parameter/color3 = Color(0.678431, 0.12549, 0.12549, 1)
shader_parameter/color4 = Color(0.94902, 0.901961, 0.901961, 1)
shader_parameter/simple_shading_mode = true
shader_parameter/brightness_factor = 0.0

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 160.0
offset_bottom = 144.0
script = ExtResource("1_2fjw2")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.25
anchor_bottom = 0.25
offset_top = -22.0
offset_right = 160.0
offset_bottom = -8.0
theme = ExtResource("2_rsrfe")
theme_override_colors/font_color = Color(0.678431, 0.12549, 0.12549, 1)
theme_override_colors/font_shadow_color = Color(0.94902, 0.901961, 0.901961, 1)
theme_override_font_sizes/font_size = 12
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.25
anchor_bottom = 0.25
offset_left = 20.0
offset_top = 77.0
offset_right = 140.0
offset_bottom = 91.0
theme = ExtResource("2_rsrfe")
theme_override_colors/font_color = Color(0.94902, 0.901961, 0.901961, 1)
theme_override_colors/font_shadow_color = Color(0.337255, 0.0352941, 0.0352941, 1)
theme_override_font_sizes/font_size = 7
text = "Score"
vertical_alignment = 1

[node name="Value" type="Label" parent="Score"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.25
anchor_bottom = 0.25
offset_top = -3.5
offset_right = 120.0
offset_bottom = 10.5
theme = ExtResource("2_rsrfe")
theme_override_colors/font_color = Color(0.94902, 0.901961, 0.901961, 1)
theme_override_colors/font_shadow_color = Color(0.337255, 0.0352941, 0.0352941, 1)
theme_override_font_sizes/font_size = 10
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 58.0
offset_right = 141.0
offset_bottom = 85.0
metadata/_edit_group_ = true

[node name="Play Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_rsrfe")
theme_override_colors/font_pressed_color = Color(0.94902, 0.901961, 0.901961, 1)
theme_override_colors/font_color = Color(0.678431, 0.12549, 0.12549, 1)
theme_override_styles/focus = ExtResource("5_855qb")
theme_override_styles/hover = ExtResource("5_855qb")
theme_override_styles/pressed = ExtResource("5_855qb")
theme_override_styles/normal = ExtResource("4_ljg0n")
text = "PLAY"
script = ExtResource("2_bqwm6")

[node name="background" type="Sprite2D" parent="."]
z_index = -1
hframes = 18
vframes = 17
frame = 133

[node name="Polygon2D" type="Polygon2D" parent="background"]
color = Color(0.0980392, 0, 0, 1)
polygon = PackedVector2Array(0, 0, 160, 0, 160, 144, 0, 144)

[node name="main-menu-music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_rbqbq")
volume_db = -12.0

[node name="UI_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_ch556")

[node name="color_4_post_process" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="color_4_post_process"]
visible = false
material = SubResource("ShaderMaterial_x0en0")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="Loop1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_6yras")
volume_db = -10.0

[connection signal="pressed" from="VBoxContainer/Play Button" to="." method="_on_play_button_pressed"]
